[package]
name = "owasm"
version = "0.1.11"
authors = ["Band Protocol <connect@bandprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/bandprotocol/owasm"
description = "Standard library for oracle scripts on BandChain"
readme = "README.md"
"""

[dependencies]
assert_matches = "1.3.0"
hex = "0.4"
json = "0.12.0"
num = "0.2.1"
parity-wasm = "0.41"
pwasm-utils = "0.12"
wasmer = { version = "1.0.2", default-features = false, features = ["jit", "singlepass", "compiler"] }
tempfile = "3.1.0"
clru = "0.2.0"
cosmwasm-vm = { git = "https://github.com/CosmWasm/cosmwasm", rev = "263202f13fef3bfabc2e1036514667812f0e7e62" }
